Fixed headers fixed, but not center aligned yet

--- a/prototype/transport_nov_angularjs/app/css/app.css
+++ b/prototype/transport_nov_angularjs/app/css/app.css
@@ -163,11 +163,19 @@ div.schedule-table div.th-inner {
 
 /* the height of the header row - this needs to match line-height above */
 div.schedule-table div.fixed-table-container {
-   padding-top: 50px;
+   padding-top: 25px;
 }
 
 div.schedule-table tr.hidden-header .th-inner {
   padding-right: 5px;
+}
+
+div.schedule-table > th, div.schedule-table > td {
+    text-align: center;
+}
+
+div.schedule-table > td {
+    text-align: center;
 }
 
 .schedule-table-ui {
@@ -226,8 +234,15 @@ div.schedule-table tr.hidden-header .th-inner {
 
 .schedule-menu-well {
     background: white;
+    border-radius: 0;
 }
 
 #show-menu-button {
     margin-bottom: 20px;
 }
+
+.schedule-header {
+    position: absolute;
+    top: 0;
+}
+
